feat: impl uds, start script

--- a/lark-saga-orchestrator.cabal
+++ b/lark-saga-orchestrator.cabal
@@ -1,4 +1,5 @@
-cabal-version:      3.0
+cabal-version:   3.0
+
 -- The cabal-version field refers to the version of the .cabal specification,
 -- and can be different from the cabal-install (the tool) version and the
 -- Cabal (the library) version you are using. As such, the Cabal (the library)
@@ -11,7 +12,7 @@ cabal-version:      3.0
 --   http://haskell.org/cabal/users-guide/
 --
 -- The name of the package.
-name:               lark-saga-orchestrator
+name:            lark-saga-orchestrator
 
 -- The package version.
 -- See the Haskell package versioning policy (PVP) for standards
@@ -20,7 +21,7 @@ name:               lark-saga-orchestrator
 -- PVP summary:     +-+------- breaking API changes
 --                  | | +----- non-breaking API additions
 --                  | | | +--- code changes with no API change
-version:            0.1.0.0
+version:         0.1.0.0
 
 -- A short (one-line) description of the package.
 -- synopsis:
@@ -29,24 +30,24 @@ version:            0.1.0.0
 -- description:
 
 -- The license under which the package is released.
-license:            MIT
+license:         MIT
 
 -- The file containing the license text.
-license-file:       LICENSE
+license-file:    LICENSE
 
 -- The package author(s).
-author:             permalik
+author:          permalik
 
 -- An email address to which users can send suggestions, bug reports, and patches.
-maintainer:         permalik@protonmail.com
+maintainer:      permalik@protonmail.com
 
 -- A copyright notice.
 -- copyright:
-category:           System
-build-type:         Simple
+category:        System
+build-type:      Simple
 
 -- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-extra-doc-files:    CHANGELOG.md
+extra-doc-files: CHANGELOG.md
 
 -- Extra source files to be distributed with the package, such as examples, or a tutorial module.
 -- extra-source-files:
@@ -68,7 +69,15 @@ executable lark-saga-orchestrator
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:
+        , aeson
+        , base        ^>=4.18.3.0
+        , bytestring
+        , containers
+        , deepseq
+        , network
+        , text
+        , unix
 
     -- Directories containing source files.
     hs-source-dirs:   app
