--- a/lark-saga-orchestrator.cabal
+++ b/lark-saga-orchestrator.cabal
@@ -71,13 +71,13 @@ executable lark-saga-orchestrator
     -- Other library packages from which modules are imported.
     build-depends:
         , aeson
-        , base        ^>=4.18.3.0
+        , base          ^>=4.18.3.0
         , bytestring
-        , containers
-        , deepseq
-        , network
+        , http-conduit
+        , http-types
         , text
-        , unix
+        , wai
+        , warp
 
     -- Directories containing source files.
     hs-source-dirs:   app
