feat: impl structured logging

--- a/lark-saga-orchestrator.cabal
+++ b/lark-saga-orchestrator.cabal
@@ -76,6 +76,7 @@ executable lark-saga-orchestrator
         , http-conduit
         , http-types
         , text
+        , time
         , wai
         , warp
 
