feat: write logs to file

--- a/lark-saga-orchestrator.cabal
+++ b/lark-saga-orchestrator.cabal
@@ -73,6 +73,7 @@ executable lark-saga-orchestrator
         , aeson
         , base          ^>=4.18.3.0
         , bytestring
+        , directory
         , http-conduit
         , http-types
         , text
