--- a/lark-saga-orchestrator.cabal
+++ b/lark-saga-orchestrator.cabal
@@ -78,6 +78,8 @@ executable lark-saga-orchestrator
         , http-types
         , text
         , time
+        , tz
+        , tzdata
         , wai
         , warp
 
