--- a/lark-orchestrator.cabal
+++ b/lark-orchestrator.cabal
@@ -12,7 +12,7 @@ cabal-version:   3.0
 --   http://haskell.org/cabal/users-guide/
 --
 -- The name of the package.
-name:            lark-saga-orchestrator
+name:            lark-orchestrator
 
 -- The package version.
 -- See the Haskell package versioning policy (PVP) for standards
